# oak

./: .gitignore  LICENSE  README.md  cabal.project.freeze  circle.yml  config.json.example  oak.cabal  stack.yaml
frontend/: .gitignore  bower.json
frontend/fake-src/: Main.purs
frontend/homesrc/: BoosterSelector.purs  Main.purs
frontend/src/: Card.purs  CardList.purs  Main.purs  PlayerList.purs
src/: Main.hs
src/Data/: Vec.hs
src/Data/UUID/: SafeCopy.hs
src/Oak/: Config.hs  Web.hs
src/Oak/Config/: TH.hs
src/Oak/Core/: Booster.hs  Room.hs
src/Oak/Core/Booster/: Cycles.hs  Database.hs  Types.hs
src/Oak/Core/Room/: Bot.hs
src/Oak/Web/: Components.hs  SessionStore.hs  Types.hs  Utils.hs
src/Oak/Web/Components/: Room.hs
static/: about.html  index.css  index.html  join.html  room.css  room.html
