name:                oak
version:             0.1.0.0
synopsis:            MLP:CCG Draft Simulator
description:         Please see README.md
homepage:            https://github.com/hithroc/oak#readme
license:             BSD3
license-file:        LICENSE
author:              Hithroc Mehatoko
maintainer:          hithroc@gmail.com
copyright:           Hithroc Mehatoko
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable oak
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Oak.Core.Booster
                       Oak.Core.Booster.Database
                       Oak.Core.Booster.Types
                       Oak.Core.Room
                       Oak.Config
                       Oak.Config.TH
                       Oak.Web
                       Oak.Web.Components
                       Oak.Web.Components.Room
                       Oak.Web.Types
                       Oak.Web.Utils
                       Data.Vec
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -fno-warn-unused-top-binds
  default-extensions:  OverloadedStrings
                      ,ScopedTypeVariables
                      ,TupleSections
                      ,DataKinds
                      ,FlexibleInstances
  build-depends:       base >= 4.7 && < 5
                      ,text
                      ,lens
                      ,random
                      ,vector
                      ,MonadRandom
                      ,aeson
                      ,bytestring
                      ,wai
                      ,warp
                      ,Spock
                      ,Spock-worker
                      ,http-api-data
                      ,reroute
                      ,hvect
                      ,uuid
                      ,stm
                      ,containers
                      ,base64-bytestring
                      ,hashids
                      ,http-types
                      ,crypto-api
                      ,mwc-random
                      ,primitive
                      ,spoon
                      ,hashable
                      ,wai-middleware-static
                      ,directory
                      ,template-haskell
                      ,process
                      ,wai-websockets
                      ,websockets
