name:                oak
version:             1.2.0.0
synopsis:            MLP:CCG Draft Simulator
description:         Please see README.md
homepage:            https://github.com/hithroc/oak#readme
license:             BSD3
license-file:        LICENSE
author:              Hithroc Mehatoko
maintainer:          hithroc@gmail.com
copyright:           Hithroc Mehatoko
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable oak
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Oak.Core.Booster
                       Oak.Core.Booster.Database
                       Oak.Core.Booster.Types
                       Oak.Core.Booster.Cycles
                       Oak.Core.Room
                       Oak.Config
                       Oak.Config.TH
                       Oak.Web
                       Oak.Web.SessionStore
                       Oak.Web.Components
                       Oak.Web.Components.Room
                       Oak.Web.Types
                       Oak.Web.Utils
                       Data.Vec
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -fno-warn-unused-top-binds
  default-extensions:  OverloadedStrings
                      ,ScopedTypeVariables
                      ,TupleSections
                      ,DataKinds
                      ,KindSignatures
                      ,TypeFamilies
                      ,FlexibleInstances
                      ,FlexibleContexts
                      ,BangPatterns
                      ,DeriveGeneric
  build-depends:       base >= 4.7 && < 5
                      ,text >= 1.2.2.1
                      ,lens >= 4.15.1
                      ,random >= 1.1
                      ,vector >= 0.11
                      ,MonadRandom >= 0.5.1
                      ,aeson >= 1.0.2.1
                      ,bytestring >= 0.10.8.1
                      ,wai >= 3.2.1.1
                      ,warp >= 3.2.11.1
                      ,Spock >= 0.12.0.0
                      ,Spock-worker >= 0.3.1.0
                      ,http-api-data >= 0.3.5
                      ,reroute >= 0.4.1.0
                      ,hvect >= 0.4.0.0
                      ,uuid >= 1.3.13
                      ,stm >= 2.4.4.1
                      ,containers >= 0.5.7.1
                      ,hashids
                      ,http-types >= 0.9.1
                      ,spoon >= 0.3.1
                      ,wai-middleware-static >= 0.8.1
                      ,directory >= 1.3.0.0
                      ,template-haskell >= 2.11.1.0
                      ,process >= 1.4.3.0
                      ,wai-websockets >= 3.0.1.1
                      ,websockets >= 0.10.0.0
                      ,safecopy >= 0.9.2
                      ,cereal >= 0.5.4.0
                      ,unix >= 2.7.2.1
                      ,acid-state >= 0.14.2
                      ,mtl >= 2.2.1
                      ,time >= 1.6.0.1
                      ,deepseq >= 1.4.2.0
                      ,streams >= 3.3
                      ,random-shuffle >= 0.0.4
