name:                oak
version:             1.3.1.0
synopsis:            MLP:CCG Draft Simulator
description:         Please see README.md
homepage:            https://github.com/hithroc/oak#readme
license:             BSD3
license-file:        LICENSE
author:              Hithroc Mehatoko
maintainer:          hithroc@gmail.com
copyright:           Hithroc Mehatoko
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable oak
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Oak.Core.Booster
                       Oak.Core.Booster.Database
                       Oak.Core.Booster.Types
                       Oak.Core.Booster.Cycles
                       Oak.Core.Room
                       Oak.Config
                       Oak.Config.TH
                       Oak.Web
                       Oak.Web.SessionStore
                       Oak.Web.Components
                       Oak.Web.Components.Room
                       Oak.Web.Types
                       Oak.Web.Utils
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -fno-warn-unused-top-binds
  default-extensions:  OverloadedStrings
                      ,ScopedTypeVariables
                      ,TupleSections
                      ,DataKinds
                      ,KindSignatures
                      ,TypeFamilies
                      ,FlexibleInstances
                      ,FlexibleContexts
                      ,BangPatterns
                      ,DeriveGeneric
                      ,RankNTypes
  build-depends:       base
                      ,text
                      ,lens
                      ,random
                      ,vector
                      ,MonadRandom
                      ,aeson
                      ,bytestring
                      ,wai
                      ,warp
                      ,Spock
                      ,Spock-worker
                      ,http-api-data
                      ,reroute
                      ,hvect
                      ,uuid
                      ,stm
                      ,containers
                      ,hashids
                      ,http-types
                      ,spoon
                      ,wai-middleware-static
                      ,directory
                      ,template-haskell
                      ,process
                      ,wai-websockets
                      ,websockets
                      ,safecopy
                      ,cereal
                      ,unix
                      ,acid-state
                      ,mtl
                      ,time
                      ,deepseq
                      ,streams
                      ,random-shuffle
